# rag-crm

./: .env.example  .gitignore  CLAUDE.md  DECISIONS.md  MAP.md  README.md  setup.sh  test-ui.html
.githooks/: commit-msg
backend/: .dockerignore  Dockerfile  Dockerfile.ci  alembic.ini  pyproject.toml  requirements-app.txt  requirements-dev.txt  requirements-ml.txt
backend/app/: main.py
backend/app/agents/: __init__.py  answer_agent.py  critic_agent.py  crm_context.py  memory_agent.py  reranker_agent.py  retriever_agent.py  router_agent.py  state.py  state_graph.py  synthesizer_agent.py
backend/app/api/: __init__.py  admin.py  auth.py  connectors.py  documents.py  graph.py  health.py  memory.py  qa.py  search.py  wiki.py
backend/app/connectors/: __init__.py  crm.py
backend/app/core/: auth.py  config.py  database.py  dependencies.py  logging.py  metrics.py  middleware.py  ratelimit.py  runtime_config.py
backend/app/ingestion/: __init__.py
backend/app/knowledge/: __init__.py  knowledge_agent.py  models.py  wiki_service.py
backend/frontend/: DESIGN.md  Dockerfile  app.py  requirements.txt  run_tests.sh
backend/migrations/: env.py
backend/tests/: conftest.py  test_auth.py  test_crm_api.py  test_crm_connector.py  test_crm_qa.py  test_documents.py  test_embeddings.py  test_health.py  test_hybrid_search.py  test_ingestion_parsers.py  test_ingestion_pipeline.py  test_knowledge.py  test_knowledge_graph.py  test_langgraph_pipeline.py  test_logging.py  test_memory.py  test_pdf_parser.py  test_qa.py  test_qdrant_migration.py  test_ratelimit.py  test_search.py
(+122 files in other folders)
